--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,7 +24,7 @@ body {
 textarea {
   font-family: 'Trispace', sans-serif;
   font-size: 11px;
-  padding: 10px 0px 0px 10px;
+  padding: 10px 0 0 10px;
   width: 320px;
 }
 
@@ -32,11 +32,11 @@ textarea {
 color:rgb(126, 125, 125);
 font-size: 10px;
 text-align: end;
-margin-top: 0px;
-margin-bottom: 0px;
+margin-top: 0;
+margin-bottom: 0;
 }
 
-.sendThought {   /* how do I get the text centered in the button? */
+.sendThought {
   background-color: rgb(252, 181, 181);
   margin-bottom: 15px;
   height: 35px;
@@ -97,7 +97,7 @@ margin-bottom: 0px;
 .likeDetail {
   font-size: 11px;
   color:rgb(172, 172, 172);
-  margin: 0px 5px;
+  margin: 0 5px;
 }
 
 .timeStamp {
