--- a/code/src/components/header.css
+++ b/code/src/components/header.css
@@ -1,6 +1,4 @@
 header {
-    grid-column: span 3;
     justify-self: center;
-    justify-content: center;
-    align-self: center;
+    text-align: center;
 }
