--- a/code/src/components/thoughts-list.css
+++ b/code/src/components/thoughts-list.css
@@ -6,8 +6,8 @@
 }
 
 .thought-container {
-  border: 2px solid #000000;
-  background-color: #FFFFFF;
+  border: 2px solid #000;
+  background-color: #FFF;
   width: 500px;
   padding: 20px;
   margin-bottom: 40px;
