--- a/code/src/index.css
+++ b/code/src/index.css
@@ -115,6 +115,7 @@ box-shadow: 8px 8px black;
 margin-bottom: 30px;
 display: flex;
 flex-direction: column;
+word-wrap: break-word;
 }
 
 .message {
