--- a/code/src/Styles/heartButton.css
+++ b/code/src/Styles/heartButton.css
@@ -1,38 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+.nrOfLikes {
+  color: #d3d3d3;
+}
 
-.nrOfLikes{
-    color: #D3D3D3;
-  }
-  
-  .very-liked {
-    background:#DC143C;
-  }
-  
-  .liked {
-    background: #ffadad;
-  }
-  
-  .unliked {
-    background: #c9c0bb;
-  }
-  
-  .heart-button {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 5px;
-  }
-  
-  .heart-button:hover{
-    cursor: pointer;
-  }
-  
-   .heart-container{
-     display: flex;
-     align-items: center;
-  
-  }
+.very-liked {
+  background: #dc143c;
+}
+
+.liked {
+  background: #ffadad;
+}
+
+.unliked {
+  background: #c9c0bb;
+}
+
+.heart-button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 5px;
+}
+
+.heart-button:hover {
+  cursor: pointer;
+}
+
+.heart-container {
+  display: flex;
+  align-items: center;
+}
