--- a/code/src/Styles/messageOutput.css
+++ b/code/src/Styles/messageOutput.css
@@ -1,112 +1,110 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
-/* @import "path/to/font-awesome/less/font-awesome.less"; */
-@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
 
-.message-card, .form-card {
-    width: 400px;
-    height: auto;
-    border: 1px solid #000;
-    margin-bottom: 30px; 
-    padding: 10px;
-    box-shadow: 6px 6px #000;
-  }
-
+.message-card,
+.form-card {
+  width: 400px;
+  height: auto;
+  border: 1px solid #000;
+  margin-bottom: 30px;
+  padding: 10px;
+  box-shadow: 6px 6px #000;
+}
 
 /* ----Message Cards */
-.message{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    /* width: 350px; */
-    word-break: break-word;
-   }
-  
-  .message-time {
-    font-size: 15px;
-    margin-left: 10px;
-    color: #A9A9A9;
-    /* color: #D3D3D3; */
-  } 
- 
-   .message-card {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      background: #F5F5F5;
-  } 
-  
-  .input-text{
-    width: 360px;
-    height: 80px; 
-    align-self: center;
-  }
-  
-  .message {
-    width: 360px;
-  }
 
-  /* -----Form-card-------------- */
+.message {
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  word-break: break-word;
+}
 
-.form-card{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background: #f1dbda;
-   
-  }
-  
-  .love {
-    margin-left: 20px;
-  }
-  
-  .length {
-    align-self: flex-end;
-    margin-bottom: 10px;
-  }
+.message-time {
+  font-size: 15px;
+  margin-left: 10px;
+  color: #a9a9a9;
+}
 
-  .black{
-    color: #000;
+.message-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background: #f5f5f5;
+}
+
+.input-text {
+  width: 360px;
+  height: 80px;
+  align-self: center;
+}
+
+.message {
+  width: 360px;
+}
+
+/* -----Form-card-------------- */
+
+.form-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background: #f1dbda;
+}
+
+.love {
+  margin-left: 20px;
+}
+
+.length {
+  align-self: flex-end;
+  margin-bottom: 10px;
+}
+
+.black {
+  color: #000;
+}
+
+.grey {
+  color: #a9a9a9;
+}
+
+.form-button {
+  background: #ffadad;
+  width: 185px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  margin-top: 15px;
+}
+
+/* -------------Footer----------- */
+
+.footer-text {
+  font-family: "Itim", cursive;
+}
+
+/* -------Media-queries------------- */
+
+@media (max-width: 498px) {
+  .message-card,
+  .form-card {
+    width: 350px;
   }
+}
 
-  .grey{
-    color:#A9A9A9;
+@media (max-width: 430px) {
+  .message-card,
+  .form-card {
+    width: 300px;
   }
-  
-  .form-button{
-    background:  #ffadad;
-    width: 185px;
-    height: 40px;
-    border-radius: 20px;
-    border: none;
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-    margin-top: 15px; 
-    
+}
+
+@media (max-width: 373px) {
+  .message-card,
+  .form-card {
+    width: 250px;
   }
-
-  /* -------------Footer----------- */
-
-  .footer-text{
-     font-family: 'Itim', cursive;
- }
-
-  /* -------Media-queries------------- */
-  
-  @media (max-width: 498px){
-    .message-card, .form-card {
-      width: 350px;
-    }
-   }
-  
-   @media (max-width: 430px){
-    .message-card, .form-card {
-      width: 300px;
-    }
-   }
-  
-   @media (max-width: 373px){
-    .message-card, .form-card {
-      width: 250px;
-    }
-   }
-  
+}
