--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,92 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.message-section {
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  padding: 10px;
+  box-shadow: 5px 10px;
+}
+
+.new-thought-section {
+  background-color: rgb(235, 235, 235);
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  box-shadow: 5px 10px;
+}
+
+.submit-button {
+  align-items: center;
+  margin-top: 10px;
+  padding: 10px;
+  border: 0px solid;
+  border-radius: 20px;
+  background-color: rgb(255, 195, 195);
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
+.likeheart-button {
+  border: 5px solid transparent;
+  border-radius: 50%;
+}
+
+.likeheart-button:hover {
+  background-color: rgb(255, 195, 195);
+}
+
+h2 {
+  font-size: small;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
+h3 {
+  display: flex;
+  font-size: small;
+  margin-top: 25px;
+  color: lightgrey;
+}
+
+.button-section-newthought {
+  display: flex;
+  justify-content: space-between;
+}
+
+.heartbutton-section {
+  color: lightgrey;
+}
+
+.heartbutton-x-section {
+  position: absolute;
+}
+
+.message-time {
+  display: flex;
+  flex-direction: row-reverse;
+  align-content: center;
 }
