--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: 'PT Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffd5d5;
 }
 
 code {
