--- a/code/src/index.css
+++ b/code/src/index.css
@@ -87,3 +87,16 @@ input[type=submit] {
 .like-button:focus {
   background-color: #ffadad;
 }
+
+/* desktop */ 
+
+@media only screen and (min-width: 600px) {
+
+  .submit-form {
+    width: 450px;
+  }
+  
+  .message {
+    width: 450px;
+  }
+}
