Small changes in css for form.

--- a/code/src/components/Styles/thoughtform.css
+++ b/code/src/components/Styles/thoughtform.css
@@ -9,6 +9,10 @@
     width: 100%;
 }
 
+.thoughts-form__input {
+    width: 100%;
+}
+
 ::placeholder {
     font-family: 'Inconsolata', monospace;
 }
