Adding evelinas changes

--- a/code/src/Messagelist.css
+++ b/code/src/Messagelist.css
@@ -28,6 +28,7 @@ button {
     flex-direction: column;
     justify-content: space-between;
     padding: 20px;
+    word-wrap: break-word 
 }
 
 @media (min-width: 668px) {
