--- a/code/src/HappyForm.css
+++ b/code/src/HappyForm.css
@@ -4,7 +4,7 @@
     padding: 20px;
     background-color: #f5f5f1;
     border: 1px solid black;
-    box-shadow: 4px 10px black;
+    box-shadow: 4px 10px #000;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -37,7 +37,7 @@
 
 .happy-form button:hover {
     cursor: pointer;
-    background: white;
+    background: #fff;
     border: 1px solid #ffadad;
 }
 
