--- a/code/src/components/Styles.scss
+++ b/code/src/components/Styles.scss
@@ -167,7 +167,13 @@ body {
 /*--- LOADER ---*/
 
 .Loader {
+  display: flex;
+  justify-content: center;
   animation: pulse 3s linear infinite;
+
+  &__image {
+    width: 200px;
+  }
 }
 
 /*--- KEYFRAME ---*/
@@ -177,7 +183,7 @@ body {
     transform: scale(1);
   }
   50% {
-    transform: scale(1.2);
+    transform: scale(1.3);
   }
   100% {
     transform: scale(1);
