--- a/code/src/components/Styles.scss
+++ b/code/src/components/Styles.scss
@@ -51,7 +51,7 @@ body {
     margin-top: 0;
   }
 
-  &__textarea {
+  &__input {
     width: 100%;
     padding: 5px;
 
@@ -112,6 +112,7 @@ body {
     font-size: 13px;
     opacity: 0.4;
     text-align: right;
+    margin: 5px 0;
   }
 
   &__span {
