--- a/code/src/index.css
+++ b/code/src/index.css
@@ -29,12 +29,12 @@ code {
 }
 
 .send-thought {
-  border: 1px solid black;
+  border: 1px solid #000;
   width: 90%;
   height: 135px;
   margin: 30px 0;
   padding: 10px;
-  box-shadow: 5px 5px 1px black;
+  box-shadow: 5px 5px 1px #000;
   background-color: rgb(240, 236, 236);
   position: relative;
 }
@@ -85,7 +85,7 @@ code {
 }
 
 .black-length {
-  color: #000000;
+  color: #000;
 }
 
 .thoughts-section {
@@ -104,7 +104,7 @@ code {
   padding: 10px;
   box-shadow: 5px 5px 1px black;
   word-break: break-word;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 
 .thought-text {
