--- a/code/src/Components/Style.css
+++ b/code/src/Components/Style.css
@@ -16,6 +16,10 @@ h2 {
   font-size: 18px;
 }
 
+h3 {
+  font-weight: 400;
+}
+
 main {
   width: 90%;
   max-width: 500px;
@@ -45,9 +49,18 @@ label {
   grid-column: 1/3;
 }
 
+input {
+  margin-bottom: 10px;
+  padding: 5px;
+  font-family: menlo;
+  font-size: 16px;
+}
+
 textarea {
   width: 100%;
+  padding: 5px;
   font-size: 16px;
+  font-family: menlo;
 }
 
 .button-send-post {
@@ -80,6 +93,47 @@ textarea {
 
 .wrongLength {
   color: #e73a3a;
+}
+
+/*Filtering*/
+.button-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.filter-btn {
+  position: relative;
+  padding: 8px;
+  width: 100%;
+  border-radius: 3px;
+  background: transparent;
+  border: 2px solid #ffadad;
+  font-size: 14px;
+  font-family: inherit;
+  color: #6a6969;	
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: 0.08s ease-in;
+  margin-left: 3px;
+}
+
+.filter-btn:before {
+  content: "";
+  position: absolute;
+  background: #ffadad;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 100%;
+  z-index: -1;
+  transition: top 0.09s ease-in;
+}
+
+.filter-btn:hover:before,
+.filter-btn:focus::before {
+  top: 0;
 }
 
 .post {
