--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,6 +10,7 @@ body {
   border: 2px solid black;  
   padding: 0 20px;
   background-color: white;
+  word-wrap: break-word;
 }
 
 /*** MessageInput ***/
