--- a/code/src/HappyForm.css
+++ b/code/src/HappyForm.css
@@ -61,6 +61,17 @@
   border: none;
 }
 
+.happy-form-input-button-disabled {
+  background: #f7dcdd;
+  color: #a3a2a2;
+  padding: 6px 12px 8px 12px;
+  font-size: 14px;
+  font-weight: 600;
+  border-radius: 40px;
+  font-family: 'Inconsolata', monospace;
+  border: none;
+}
+
 .form-footer p {
   font-size: 14px;
   font-family: 'Roboto', sans-serif;
@@ -87,7 +98,8 @@
     margin: 20px;
   }
   
-  .happy-form-input-button {
+  .happy-form-input-button,
+  .happy-form-input-button-disabled {
     font-size: 18px;
     padding: 8px 15px 10px 15px;
   }
@@ -119,7 +131,8 @@
     margin: 25px auto;
   }
   
-  .happy-form-input-button {
+  .happy-form-input-button,
+  .happy-form-input-button-disabled {
     font-size: 20px;
     padding: 12px 18px 14px 18px;
   }
