some styling, started to implement infinite scroll

--- a/code/src/Components/Style.css
+++ b/code/src/Components/Style.css
@@ -159,7 +159,7 @@ textarea {
   text-align: end;
 }
 
-.post-text-time {
+.post-information {
   font-size: 14px;
   opacity: 0.5;
   text-align: end;
