Updated Form to send in name to database, added name to be showed in post

--- a/code/src/Components/HappyForm.css
+++ b/code/src/Components/HappyForm.css
@@ -29,6 +29,8 @@ h1 {
 .post-message {
   margin: 12px;
   padding: 10px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 1em;
 }
 
 .submit-button {
