--- a/code/src/Messagelist.css
+++ b/code/src/Messagelist.css
@@ -2,6 +2,12 @@ button {
     border: none;
 }
 
+.written-by{
+    font-size: 10px;
+    font-style: italic;
+    color: grey; 
+}
+
 .message {
     display: flex;
     flex-direction: column;
