--- a/code/src/Components/Style.css
+++ b/code/src/Components/Style.css
@@ -20,6 +20,10 @@ h3 {
   font-weight: 400;
 }
 
+h4, h5 {
+  text-align: center;
+}
+
 main {
   width: 90%;
   max-width: 500px;
@@ -136,6 +140,11 @@ textarea {
   top: 0;
 }
 
+.infinite-scroll-component {
+  display: grid;
+  grid-row-gap: 20px; 
+}
+
 .post {
   border: 1px solid #000000;
   box-shadow: 7px 7px;
@@ -217,6 +226,7 @@ textarea {
   border: 5px solid #f2f0f0;
   border-radius: 50%;
   border-top: 6px solid #ffadad;
+  position: relative;
   width: 60px;
   height: 60px;
   display: flex;
