--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -13,7 +13,8 @@
 }
 
 textarea {
-    width: 50%;
+    width: 500px;
+    max-width: 70%;
     resize: none;
     padding: 10px;
     box-sizing: border-box;
