--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -4,8 +4,8 @@
     background-color: #ffadad;
     border: none;
     border-radius: 25px;
-    font-weight: 500;
-    font-size: larger;
+    font-size: 23px;
+    margin: -15 30px;
 }
 
 .button:hover {
@@ -19,10 +19,12 @@ textarea {
     padding: 10px;
     box-sizing: border-box;
     margin: 10px 0;
+    font-size: 16px;
 }
 .form-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 form {
@@ -30,7 +32,7 @@ form {
   flex-direction: column;
   align-items: center;
   width: 500px;
-  max-width: 70%;
+  max-width: 80%;
 }
 
 form p {
