updated the URL so it fetches from my API instead of the Technigo API. Added a counter of characters to show how many characters you have typed

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -50,6 +50,10 @@ input {
   height: 50px;
 }
 
+.counter {
+  margin-left: 10px;
+}
+
 .submit-button {
   margin-left: 5px;
   border-radius: 30px;
