--- a/code/src/index.css
+++ b/code/src/index.css
@@ -31,8 +31,8 @@ code {
 .send-thought {
   border: 1px solid #000;
   width: 90%;
-  height: 135px;
-  margin: 30px 0;
+  height: 158px;
+  margin: 30px 0 15px 0;
   padding: 10px;
   box-shadow: 5px 5px 1px #000;
   background-color: rgb(240, 236, 236);
@@ -45,7 +45,6 @@ code {
 }
 
 .send-thought textarea {
-  resize: none;
   margin: 10px 0;
 }
 
@@ -58,13 +57,23 @@ code {
   font-weight: 600;
   font-size: 12px;
   position: absolute;
-  bottom: 10px;
+  bottom: 7px;
   left: 10px;
 }
 
 .send-thought-button:hover {
   background-color: rgb(250, 123, 123);
   cursor: pointer;
+}
+
+.send-thought input {
+  font-size: 12px;
+  margin: 0 5px 10px;
+}
+
+.send-thought input::placeholder {
+  font-size: 12px;
+  /* font-family: Courier New, monospace; */
 }
 
 .send-heartemoji {
@@ -88,6 +97,27 @@ code {
   color: #000;
 }
 
+.sort-button-section {
+  display: flex;
+  width: 100%;
+  margin: 0 0 15px 0;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.sort-button {
+  border: 1px solid #000;
+  width: 100px;
+  height: 40px;
+  padding: 0 10px;
+  box-shadow: 5px 5px 1px #000;
+  background-color: rgb(240, 236, 236);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 16px;
+}
+
 .thoughts-section {
   width: 95%;
   align-items: center;
@@ -99,9 +129,9 @@ code {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
-  height: 135px;
+  min-height: 135px;
   margin-bottom: 30px;
-  padding: 10px;
+  padding: 5px 10px;
   box-shadow: 5px 5px 1px black;
   word-break: break-word;
   background-color: #fff;
@@ -109,6 +139,15 @@ code {
 
 .thought-text {
   font-family: Courier New, monospace;
+  font-weight: 550;
+}
+
+.username-text {
+  font-family: Courier New, monospace;
+  font-size: 13px;
+  font-weight: 200;
+  margin: 0;
+  color: rgb(71, 71, 71);
 }
 
 .time-text,
@@ -157,5 +196,6 @@ code {
 @media (min-width: 1024px) {
   .send-thought-button {
     width: 50%;
+    left: 94px;
   }
 }
