--- a/code/src/index.css
+++ b/code/src/index.css
@@ -65,8 +65,7 @@ textarea {
   border: solid 1px #C9C9C9;
   margin-bottom: 5px;
   font-family: Menlo;
-  font-size: 12px;
-  
+  font-size: 12px;  
 }
 
 textarea:focus {
@@ -97,6 +96,7 @@ textarea:focus {
 
 .text-length {
   font-size: 10px;
+  padding: 7px;
   margin: 0;
 }
 /**RESPONSIVE*/
