--- a/code/src/styling/MessageInput.css
+++ b/code/src/styling/MessageInput.css
@@ -1,12 +1,23 @@
 .form-text {
   margin-left: 30px;
   margin-top: 10px;
+  margin-right: 15px;
   font-size: 14px;
 }
 
 .form-button {
   font-size: 14px;
-  border: 5px;
-  border-radius: 0%;
-  background-color: white;
+  border: 2px solid black;
+  border-radius: 25px;
+  background-color: lightgreen;
+  color: black;
+  padding: 7px;
+}
+
+.thought-length {
+  margin-left: 30px;
+}
+
+h3 {
+  margin-left: 30px;
 }
