--- a/code/src/styling/ThoughtInput.css
+++ b/code/src/styling/ThoughtInput.css
@@ -1,3 +1,14 @@
+.input-form {
+  display: flex;
+  justify-content: center;
+}
+
+h3 {
+  margin-left: 30px;
+  color: #262626;
+  font-size: 36px;
+}
+
 .form-text {
   margin-left: 30px;
   margin-top: 10px;
@@ -15,10 +26,6 @@
 }
 
 .thought-length {
-  margin-left: 30px;
-}
-
-h3 {
   margin-left: 30px;
 }
 
