--- a/code/src/styling/ThoughtList.css
+++ b/code/src/styling/ThoughtList.css
@@ -1,3 +1,10 @@
+.thoughts-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .message {
   font-size: 18px;
   font-weight: bold;
