--- a/code/src/styling/ThoughtInput.css
+++ b/code/src/styling/ThoughtInput.css
@@ -1,36 +1,46 @@
+.input-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .input-form {
   display: flex;
   justify-content: center;
+  align-items: center;
+  border: 2px black solid;
+  width: 300px;
+  padding: 10px;
+  background-color: yellow;
 }
 
-h3 {
-  margin-left: 30px;
+h4 {
   color: #262626;
-  font-size: 36px;
 }
 
 .form-text {
-  margin-left: 30px;
-  margin-top: 10px;
-  margin-right: 15px;
   font-size: 14px;
+  padding: 5px;
+  margin: 5px;
 }
 
 .form-button {
   font-size: 14px;
-  border: 2px solid black;
+  border: 2px solid #ff66d9;
   border-radius: 15px;
-  background-color: lightgreen;
+  background-color: #ff66d9;
   color: black;
-  padding: 7px;
+  padding: 5px;
 }
 
 .thought-length {
-  margin-left: 30px;
+  font-size: 14px;
 }
 
 .characters {
-  margin-left: 30px;
   margin-top: -10px;
   font-size: 10px;
+}
+
+.heart {
+  padding: 5px;
 }
