--- a/code/src/styling/ThoughtList.css
+++ b/code/src/styling/ThoughtList.css
@@ -1,13 +1,19 @@
 .thoughts-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
-.message {
-  font-size: 18px;
-  font-weight: bold;
-  margin-left: 30px;
+.thoughts {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  margin: 1em auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px black solid;
+  box-shadow: 5px 5px;
+  padding: 20px;
+  background-color:#ffccff;
 }
-
