--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.postCard {
+  padding: 20px;
+  border: 1px solid black;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 15px;
+  width: 100%;
+}
