--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 40px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +10,34 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.form-container {
+  border: 2px solid black;
+  background-color: whitesmoke;
+  width: 380px;
+  padding: 15px;
+  box-shadow: 5px 5px black;
+}
+
+.input-form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+input[type=text]{
+  padding:10px;
+  margin: 15px 0;
+}
+
+.button {
+  width: fit-content;
+  border-radius: 20px;
+  background-color: rgba(255, 0,	0, 0.3);
+  border:none;
+  padding: 8px;
+}
+
+.date {
+  font-style: italic;
 }
