--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,8 +12,14 @@ code {
     monospace;
 }
 
+.app-container {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+}
+
 .form-container {
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: whitesmoke;
   width: 380px;
   padding: 15px;
@@ -36,6 +42,24 @@ input[type=text]{
   background-color: rgba(255, 0,	0, 0.3);
   border:none;
   padding: 8px;
+}
+
+.button:hover {
+  background-color: rgba(255, 0,	0, 0.5);
+}
+
+.message-container {
+  border: 1px solid black;
+  background-color: white;
+  width: 380px;
+  padding: 15px;
+  box-shadow: 5px 5px black;
+  margin: 30px 0;
+}
+
+.heart-date-container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .date {
