--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,3 +13,81 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+body > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+form,
+.thought {
+  width: 20%;
+  border: 1px solid black;
+  box-shadow: 5px 5px 0 black;
+  margin: 20px;
+  padding: 20px;
+}
+
+form {
+  background-color: rgb(240, 240, 240);
+  display: flex;
+  flex-direction: column;
+}
+
+form input {
+  font-family: 'Roboto Mono', monospace;
+  margin: 15px 0;
+  padding: 10px 10px 30px;
+}
+
+form button {
+  width: 50%;
+  border: none;
+  border-radius: 20px;
+  padding: 10px;
+  background-color: pink;
+}
+
+form button:hover {
+  transform: scale(1.1);
+}
+
+p {
+  margin: 0;
+}
+
+.thought-message {
+  font-family: 'Roboto Mono', monospace;
+}
+
+.thought-time {
+  color: rgb(180, 180, 180);
+}
+
+.hearts-and-time-container {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hearts {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  margin-right: 10px;
+  background-color: rgb(235, 235, 235);
+}
+
+.hearts-container span {
+  color: rgb(180, 180, 180);
+}
+
+.hearts:hover {
+  transform: scale(1.2);
+  background-color: pink;
+}
+
