--- a/code/src/index.css
+++ b/code/src/index.css
@@ -31,7 +31,7 @@ form,
 }
 
 form {
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(235, 235, 235);
   display: flex;
   flex-direction: column;
 }
@@ -40,6 +40,10 @@ form input {
   font-family: 'Roboto Mono', monospace;
   margin: 15px 0;
   padding: 10px 10px 30px;
+}
+
+.red {
+  color: red;
 }
 
 form button {
