like button can only be clicked once

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -95,3 +95,12 @@ p {
   background-color: pink;
 }
 
+.hearts:disabled {
+  background-color: pink;
+  color: black;
+}
+
+.hearts:disabled:hover {
+  transform: none;
+}
+
