--- a/code/src/index.css
+++ b/code/src/index.css
@@ -15,3 +15,40 @@ code {
 .date {
   font-style: italic;
 }
+
+.message-card,
+.message-form {
+  background-color: #f2f0f0;
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto;
+  border: 2px solid black;
+  width: 500px;
+  box-shadow: 5px 5px;
+  padding: 20px;
+}
+
+button {
+  margin-top: 10px;
+  width: 250px;
+  background-color: #ffadad;
+  border: none;
+  padding: 10px;
+  border-radius: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.text-area {
+  font-size: 17px;
+  width: 470px;
+  height: 80px;
+  max-width: 470px;
+  max-height: 150px;
+}
+
+.form-title {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
