--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 350px;
 }
 
 code {
@@ -12,6 +13,68 @@ code {
     monospace;
 }
 
+.form {
+  display: block;
+  border: 1px solid black;
+  background-color: rgb(240, 235, 235);
+  padding: 10px;
+  margin: 30px 0px 30px 0px;
+  box-shadow: 5px 5px 0px 0px;
+
+}
+
+.input {
+  width: 97%;
+  height: 40px;
+  margin-top: 5px;
+}
+
+h4 {
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.btn-submit {
+  background-color: pink;
+  border: pink;
+  padding: 10px 15px;
+  border-radius: 25px;
+  margin: 10px 0px 10px 0px;
+}
+
+.message-body {
+  display: block;
+  border: 1px solid black;
+  padding: 10px;
+  margin: 30px 0px 30px 0px;
+  box-shadow: 5px 5px 0px 0px;
+
+}
+
 .time-from-now {
-  font-style: italic;
+  
+  text-align: right;
+  
+
+  font-size: 10px;
+  color: grey;
+  margin: 0;
+}
+
+.like {
+  display: flex;
+  orientation: column;
+  align-items: center;
+  
+
+  
+}
+
+.btn-like {
+  background-color: pink;
+  border: none;
+  border-radius: 40px;
+  height: 40px;
+  width: 40px;
+  margin-right: 10px;
 }
