--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Trispace:wght@300&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,4 +12,49 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.newThoughtsContainer {
+  display: flex;
+  flex-direction: column;
+
+  width: 300px;
+  border: solid 1px #8f8d8d;
+  box-shadow: 5px 5px black;
+  background-color: #f2f0f0;
+  padding: 15px;
+  margin: 30px 0;
+}
+
+input {
+  width: 100%;
+  border: solid 1px #d2d2d2;
+}
+
+/* .messageContainer{
+  width: 300px;
+ 
+} */
+
+.messageContent {
+  width: 300px;
+  border: solid 1px #8f8d8d;
+  box-shadow: 5px 5px black;
+  padding: 15px;
+  margin-bottom: 30px;
+}
+
+.messageText {
+  font-family: 'Trispace', sans-serif;
 }
