--- a/code/src/index.css
+++ b/code/src/index.css
@@ -23,10 +23,11 @@ body > div {
 
 form,
 .thought {
-  width: 20%;
+  width: 80%;
+  max-width: 400px;
   border: 1px solid black;
   box-shadow: 5px 5px 0 black;
-  margin: 20px;
+  margin: 10px;
   padding: 20px;
 }
 
@@ -104,3 +105,9 @@ p {
   transform: none;
 }
 
+@media (min-width: 667px) {
+  form,
+  .thought {
+    margin: 20px;
+}
+}
