--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Trispace:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 
 body {
   margin: 0;
@@ -33,28 +33,47 @@ code {
   border: solid 1px #8f8d8d;
   box-shadow: 5px 5px black;
   background-color: #f2f0f0;
-  padding: 15px;
+  padding: 10px;
   margin: 30px 0;
+}
+
+.newMessage {
+  font-weight: 500;
+  font-size: 14px;
 }
 
 input {
   width: 100%;
   border: solid 1px #d2d2d2;
+  font-family: 'Inconsolata', monospace;
+  margin: 10px 0;
 }
-
-/* .messageContainer{
-  width: 300px;
- 
-} */
 
 .messageContent {
   width: 300px;
   border: solid 1px #8f8d8d;
   box-shadow: 5px 5px black;
-  padding: 15px;
+  padding: 10px;
   margin-bottom: 30px;
 }
 
 .messageText {
-  font-family: 'Trispace', sans-serif;
+  font-family: 'Inconsolata', monospace;
+  font-size: 14px;
+}
+
+.heartAndTime {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.heartThings {
+  display: flex;
+}
+
+.time {
+  font-size: 12px;
+  color: #e7e7e7;
+  font-weight: 400;
 }
