--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 60px 30px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +10,45 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.content {
+  font-family: 'Inconsolata', monospace;
+  font-weight: 400;
+}
+
+.form,
+.thought-card
+{
+  border: 2px solid darkgray;
+  margin: 30px;
+  max-width: 400px;
+  padding: 16px;
+  box-shadow: 8px 8px black;
+}
+
+.form {
+  background-color: #F2F0F0;
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  border: 1px solid darkgray;
+  height: 60px;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.form button {
+  background-color: #FFADAD;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 25px;
+  margin: 12px 0px;
+  width: 50%;
+}
+
+.thought-card {
+  overflow-wrap: break-word;
 }
