--- a/code/src/index.css
+++ b/code/src/index.css
@@ -7,7 +7,103 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.header-container h1{
+  color: #ffadad;
+}
+
+.header-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.loveletter-icon{
+  width: 50px;
+}
+
+.form-container, .form-box{
+ display: flex;
+ justify-content: center;
+}
+
+.form-container{
+  background-color: #ffadad; ;
+}
+ .form-box {
+  flex-direction: column;
+  border: 1px solid #000;
+  box-shadow: 10px 12px 0 -6px #000;
+  width:80%;
+  padding: 10px;
+  background-color: azure;
+  margin:10px;
+}
+
+.button{
+  border-radius:15px;
+}
+
+.message-list-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffadad;
+}
+
+.thoughts-card {
+  border: 1px solid #000;
+  box-shadow: 10px 12px 0 -6px #000;
+  width:80%;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: azure;
+  margin:10px;
+}
+
+.message-text{
+font-family: "Inconsolata",monospace;
+font-weight: 300;
+font-size: 16px;
+}
+
+.created{
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.created-and-likes {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+/**** MEDIA QUERIES ***/
+
+/*Tablet*/
+@media (min-width: 768px) and (max-width: 1024px){
+
+ .thoughts-card, .form-box {
+   width: 50%;
+ }
+}
+
+
+
+/*Desktop*/
+@media (min-width: 1025px){
+
+  .thoughts-card, .form-box {
+    width: 20%;
+  }
+
 }
