--- a/code/src/index.css
+++ b/code/src/index.css
@@ -73,7 +73,7 @@ code {
 
 /* Message board styling */
 
-.message-container{
+.message-container {
   margin: 40px;
   border: black 1px solid;
   display: flex;
@@ -83,6 +83,30 @@ code {
   padding: 10px;
   font-family: Trispace;
 }
+.thought {
+  overflow-wrap: break-word;
+}
+
 .date{
   text-align: right;
 }
+
+.likes-container{
+  display: flex;
+}
+
+.heart-button {
+  width: 50px;
+  font-size: 30px;
+  text-align: center;
+  padding: 0;
+  color: red;
+  border: none;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.pink {
+  background: pink;
+}
+
