--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,45 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.input-section {
+  border: 5px solid black;
+  padding: 50px; /* I just add this to be able to see difference, remove it after */
+}
+
+.sub-btn {
+  border-radius: 25px;
+  padding: 10px; /* I just add this to be able to see difference, remove it after */
+}
+
+.heart-icon {
+  color: red;
+}
+
+.likes-button{
+  border-radius: 50%;
+  border: 0px;
+  width: 50px;
+  height: 50px;
+}
+
+.likes-button:hover {
+  background-color: red;
+  opacity: 0.5;
+}
+
+.likes {
+  color: blue;
+  border-radius: 50px;
+}
+
+/*.input-section {
+  background-color: red;
+  display: flex;
+  justify-content: center;
+}
+
+.input-section-box {
+  background-color: blue;
+  width: 50%;
+} */
