--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Lato&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap'); */
 
 body {
   margin: 0;
@@ -33,32 +34,55 @@ code {
   border: solid 1px #8f8d8d;
   box-shadow: 5px 5px black;
   background-color: #f2f0f0;
+  font-family: 'Lato', sans-serif;
   padding: 10px;
   margin: 30px 0;
 }
 
 .newMessage {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 13px;
+  font-weight: 600;
 }
 
-input {
+textarea {
   width: 100%;
+  height: 50px;
   border: solid 1px #d2d2d2;
   font-family: 'Inconsolata', monospace;
+  font-size: 13px;
+  resize: none;
+  padding: 5px;
   margin: 10px 0;
 }
 
+.submitButton {
+  font-family: 'Lato', sans-serif;
+  background-color: #ffadad;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 20px;
+  font-size: 12px;
+  font-weight: 600;
+}
+
 .messageContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  overflow-wrap:break-word;
   width: 300px;
+  min-height: 120px;
   border: solid 1px #8f8d8d;
   box-shadow: 5px 5px black;
-  padding: 10px;
+  padding: 15px 10px;
   margin-bottom: 30px;
 }
 
 .messageText {
   font-family: 'Inconsolata', monospace;
+  font-weight: 500;
   font-size: 14px;
 }
 
@@ -66,14 +90,62 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 10px;
 }
 
 .heartThings {
   display: flex;
+  align-items: center;
+}
+
+.heartButton {
+  height: 32px;
+  width: 32px;
+  border: none;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.heart {
+  font-size: 11px;
+  margin: auto;
+}
+
+.nrOfLikes {
+  font-family: 'Lato', sans-serif;
+  font-size: 12px;
+  color: #cfcccc;
+  font-weight: 400;
 }
 
 .time {
+  font-family: 'Lato', sans-serif;
   font-size: 12px;
-  color: #e7e7e7;
+  color: #cfcccc;
   font-weight: 400;
+}
+
+@media (min-width: 667px) {
+
+.newThoughtsContainer {
+  width: 400px;
+}
+
+.messageContent {
+  width: 400px;
+}
+
+.heartButton {
+  height: 38px;
+  width: 38px;
+}
+
+.heart {
+  font-size: 14px;
+}
+
+}
+
+@media (min-width: 1024px) {
+  
 }
