--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,20 +12,37 @@ code {
     monospace;
 }
 
-.thought-div {
-  border: 2px solid red;
-  margin: 10px;
-  padding: 10px;
-}
-
 .new-message-form {
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  width: 70%;
+  border: 2px solid black;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 30px;
+  background-color: #f1efef;
+  box-shadow: 5px 5px 0px 0px #000000;
 }
 
 .new-message-input {
-  margin-bottom: 10px;
+  margin: 10px;
+  background-color: white;
+}
+
+.submit-btn {
+  background-color: #ffaead;
+  border: none;
+  border-radius: 50px;
+  justify-content: left;
+  width: 70%;
+  padding: 10px;
+}
+
+.thought-div {
+  border: 2px solid black;
+  margin: 10px;
+  padding: 10px;
+  box-shadow: 5px 5px 0px 0px #000000;
 }
 
 .fa-heart {
